--- a/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
+++ b/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
@@ -3,8 +3,16 @@
   padding: 0;
 }
 
+li {
+  list-style-type: none;
+}
+
 .container {
   text-align: center;
+  display: grid;
+  grid-template-rows: 3fr, 1fr, auto, 1fr;
+  grid-template-columns: 1fr, 4fr;
+  gap: 4px;
 }
 
 .container div {
@@ -17,6 +25,17 @@
 
 .header {
   background-color: #393f4d;
+  grid-column: 1 / 4;
+  display: grid;
+  grid-template-columns: 1fr, 2fr;
+}
+
+.logo {
+  justify-self: start;
+}
+
+.menu {
+  align-self: start;;
 }
 
 .menu ul,
@@ -26,6 +45,9 @@
 
 .sidebar {
   background-color: #C50208;
+  grid-row: 2 / 4;
+  display: grid;
+  gap: 35px;
 }
 
 .sidebar .photo {
@@ -46,6 +68,13 @@
 
 .nav {
   background-color: #C50208;
+  grid-column: 2 / 4;
+  grid-row: 2;
+}
+
+.menu ul {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
 .nav ul li {
@@ -53,8 +82,17 @@
   text-transform: uppercase;
 }
 
+.nav ul {
+  display: grid;
+  grid-template-columns: 1fr, 1fr, 1fr;
+}
+
 .article {
   background-color: #bccbde;
+  grid-row: 3;
+  display: grid;
+  gap: 10px;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 }
 
 .article p {
@@ -83,9 +121,78 @@
 
 .footer {
   background-color: #393f4d;
+  grid-row: 4;
+  grid-column: 1 / 4;
 }
 
 .footer p {
   font-size: 13px;
   font-weight: normal;
+}
+
+
+.container {
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  gap: 4px;
+}
+
+.header {
+  grid-column: 1 / 3;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+}
+
+.logo {
+  justify-self: start;
+}
+
+.menu {
+  align-self: center;
+}
+
+.menu ul {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
+.menu ul,
+.menu li {
+  list-style-type: none;
+}
+
+.sidebar {
+  grid-row: 2 / 4;
+  display: grid;
+  gap: 50px;
+}
+
+.side-content,
+.photo {
+  display: grid;
+  align-items: center;
+}
+
+.nav ul {
+  list-style-type: none;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.article {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 15px;
+}
+
+.article .card {
+  height: 200px;
+}
+
+.card p {
+  padding: 5px;
+}
+
+.footer {
+  grid-column: 1 / 3;
 }
